scripts/gcp/21-ingress/production/23-ingress.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: admin
  namespace: magento-demo-production
spec:
  virtualhost:
    fqdn: admin-magento-open-source.imaginationmedia.com
    tls:
      secretName: admin-certificate
  routes:
    - services:
        - name: magento-admin-nginx-service
          port: 80

---

apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: frontend
  namespace: magento-demo-production
spec:
  virtualhost:
    fqdn: magento-open-source.imaginationmedia.com
    tls:
      secretName: frontend-certificate
  routes:
    - services:
        - name: magento-front-nginx-service
          port: 80
